@@ -18,6 +18,7 @@ buildout integration). The configuration file has the following format::
     [general]
     mode = upload # or download
     logfile = /path/to/logfile # defaults to stdout if not given
+    buffer_size = 65536
 
     [local]
     path = /path/on/local/machine
@@ -32,6 +33,7 @@ buildout integration). The configuration file has the following format::
 The configdict uses the following keys instead:
 
 - logfile
+- buffer_size
 - local_path
 - remote_path
 - hostname
@@ -43,6 +45,9 @@ The configdict uses the following keys instead:
 key_filename takes precedence over password. If key_filename ends with ``dsa``,
 it's assumed to be a DSA key, else an RSA key. Note that the key file must not
 be password protected.
+
+buffer_size defaults to 65536. Files are copied in chunks of this size to
+avoid loading big files into memory at once.
 
 You can also use sftpcopy as a python object like this::
 
